--- a/src/Components/layout.module.css
+++ b/src/Components/layout.module.css
@@ -14,14 +14,20 @@
   height: 50px;
   background-color: rgb(54, 29, 55);
   display: flex;
+  
 }
 .logo {
   width: 50%;
+  height:100%;
   display: flex;
   align-items: center;
   padding-left: 10px;
+  padding-top: 10px;
   color: white;
-  font-family: sans-serif;
+  font-family: fantasy;
+}
+h1{
+  margin: 0;
 }
 .credentials {
   width: 50%;
@@ -42,7 +48,7 @@ button:hover {
   background-color: hsl(294, 68%, 31%);
   color: white;
 }
-.menucontentcontainer {
+.menuContentContainer {
   display: flex;
   height: 100%;
 }
@@ -56,19 +62,24 @@ button:hover {
 .online,
 .games {
   height: calc((100vh - 50px) / 2);
+  text-align: center;
 }
-.gamescontainer {
+.gamesContainer {
   width: 100%;
   height: 25px;
   padding-left: 15px;
   display: flex;
 }
 ul {
+  width: 100%;
   text-align: left;
+  margin: 0;
+  padding: 0;
 }
 li {
+  width: 100%;
+  text-align: left;
   list-style-type: none;
-  padding: 5px;
 }
 .user {
   position: absolute;
@@ -82,14 +93,14 @@ li {
   background-color: rgb(63, 15, 64);
 }
 .content {
-  width: auto;
+  width: 100%;
   height: 100%;
   background-color: hsl(294, 68%, 34%);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.onlinecardcontainer {
+.onlineCardContainer {
   width: 100%;
   height: clamp(4.5vh, 36vh, 40vh);
   overflow: scroll;
